# harmony

./: .gitattributes  API.md  CMakeLists.txt  README.md  buildspec.yaml
examples/lua/scripts/global/: hitmarker.lua  optic.lua  script_function.lua  widget_fade.lua
examples/lua/scripts/map/: ui.lua
ext/: lua53.cmake  soloud.cmake
ext/lua/: lua.cmake
ext/lua53/: lua53.cmake
ext/soloud/: soloud.cmake
ext/soloud/audiosource/wav/: soloud_wav.cpp  soloud_wavstream.cpp
ext/soloud/backend/wasapi/: soloud_wasapi.cpp
ext/soloud/core/: soloud.cpp  soloud_audiosource.cpp  soloud_bus.cpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_faderops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_setters.cpp  soloud_core_voicegroup.cpp  soloud_core_voiceops.cpp  soloud_fader.cpp  soloud_fft.cpp  soloud_fft_lut.cpp  soloud_file.cpp  soloud_filter.cpp  soloud_misc.cpp  soloud_queue.cpp  soloud_thread.cpp
ext/soloud/include/: soloud.h  soloud_audiosource.h  soloud_bus.h  soloud_error.h  soloud_fader.h  soloud_fft.h  soloud_file.h  soloud_file_hack_off.h  soloud_file_hack_on.h  soloud_filter.h  soloud_internal.h  soloud_misc.h  soloud_queue.h  soloud_thread.h  soloud_wav.h  soloud_wavstream.h
include/balltze/: api.hpp  config.hpp  engine.hpp  event.hpp  feature.hpp  hook.hpp  math.hpp  memory.hpp  output.hpp
include/balltze/engine/: core.hpp  data_types.hpp  map.hpp  multiplayer.hpp  tag.hpp  user_interface.hpp
include/balltze/engine/tag_definitions/: actor.hpp  actor_variant.hpp  antenna.hpp  biped.hpp  bitfield.hpp  bitmap.hpp  camera_track.hpp  color_table.hpp  continuous_damage_effect.hpp  contrail.hpp  damage_effect.hpp  decal.hpp  definitions.hpp  detail_object_collection.hpp  device.hpp  device_control.hpp  device_light_fixture.hpp  device_machine.hpp  dialogue.hpp  effect.hpp  enum.hpp  equipment.hpp  flag.hpp  fog.hpp  font.hpp  garbage.hpp  gbxmodel.hpp  globals.hpp  glow.hpp  grenade_hud_interface.hpp  hud_globals.hpp  hud_interface_types.hpp  hud_message_text.hpp  hud_number.hpp  input_device_defaults.hpp  item.hpp  item_collection.hpp  light.hpp  (+47 more)
include/balltze/events/: game_input.hpp  hud_hold_to_action_message.hpp  map_file_load.hpp  tick.hpp
include/balltze/hek/: tag_file.hpp
licenses/soloud/: LICENSE
lua/modules/: blam.lua  command_parser.lua  harmony.lua
lua/modules/harmony/: commands.lua
lua/scripts/: hitmarker.lua  medals.lua  menu_events_example.lua  menu_fade.lua  optic_example.lua
lua/scripts/global/: hitmarker.lua  menu_fade.lua  widget_fade.lua
lua/scripts/map/: ui.lua
package/: manifest.json
src/: harmony.cpp  harmony.hpp  version.hpp
src/command/: command.cpp  command.hpp  config.cpp  config.hpp
src/command/commands/: client.cpp  client.hpp
src/debug/: client_player_update_log.S  client_player_update_log.cpp  client_player_update_log.hpp
src/events/: console_command.S  console_command.cpp  console_command.hpp  console_unknown_command.S  console_unknown_command.cpp  console_unknown_command.hpp  d3d9_end_scene.cpp  d3d9_end_scene.hpp  d3d9_reset.cpp  d3d9_reset.hpp  event.hpp  hs_function.S  hs_function.cpp  hs_function.hpp  keypress.S  keypress.cpp  keypress.hpp  map_load.cpp  map_load.hpp  menu_accept.S  menu_accept.cpp  menu_accept.hpp  menu_back.S  menu_back.cpp  menu_back.hpp  menu_list_tab.S  menu_list_tab.cpp  menu_list_tab.hpp  menu_mouse_button_press.S  menu_mouse_button_press.cpp  menu_mouse_button_press.hpp  menu_sound.S  menu_sound.cpp  menu_sound.hpp  multiplayer_event.S  multiplayer_event.cpp  multiplayer_event.hpp  multiplayer_hit_sound.S  multiplayer_hit_sound.cpp  multiplayer_hit_sound.hpp  (+26 more)
src/halo_data/: color.cpp  color.hpp  console.S  console.cpp  console.hpp  game_engine.cpp  game_engine.hpp  input_devices.cpp  input_devices.hpp  master_volume.cpp  master_volume.hpp  menu.cpp  menu.hpp  multiplayer_events.cpp  multiplayer_events.hpp  multiplayer_sounds.S  multiplayer_sounds.cpp  multiplayer_sounds.hpp  path.cpp  path.hpp  resolution.cpp  resolution.hpp  script.hpp  sound.S  sound.cpp  sound.hpp  sounds.cpp  sounds.hpp  tag.S  tag.cpp  tag.hpp  tag_class.hpp  type.hpp  widget.S  widget.cpp  widget.hpp  window.cpp  window.hpp
src/harmony/: harmony.cpp
src/harmony/optic/: animation.cpp  animation.hpp  bitmap.hpp
src/lua/: helpers.cpp  helpers.hpp  library.cpp  library.hpp  lua_callback.cpp  lua_callback.hpp  lua_optic.cpp  lua_optic.hpp  lua_script.cpp  lua_script.hpp  optic_store.cpp  optic_store.hpp  script.cpp  script.hpp
src/lua/api/: callback.cpp  callback.hpp  math.cpp  math.hpp  menu.cpp  menu.hpp  misc.cpp  misc.hpp  multiplayer.cpp  multiplayer.hpp  optic.cpp  optic.hpp  server.cpp  server.hpp  time.cpp  time.hpp  unload.cpp  unload.hpp  user_interface.cpp  user_interface.hpp
src/math/: color.hpp  geometry.cpp  geometry.hpp
src/memory/: codecave.cpp  codecave.hpp  codefinder.cpp  codefinder.hpp  hook.cpp  hook.hpp  memory.cpp  memory.hpp  padding.hpp  signature.cpp  signature.hpp  struct.hpp
src/memory/signatures/: client.cpp  client.hpp
src/menu/: widescreen.cpp  widescreen.hpp  widescreen_element_reposition_menu.S  widescreen_mouse.S  widescreen_override.cpp  widescreen_override.hpp  widget_render.S  widget_render.cpp  widget_render.hpp
src/messaging/: console_output.cpp  console_output.hpp  exception.cpp  exception.hpp  message_box.cpp  message_box.hpp
src/optic/: animation.cpp  animation.hpp  container.cpp  container.hpp  d3dx9.cpp  exception.cpp  exception.hpp  handler.cpp  handler.hpp  render.cpp  render.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp  store.cpp  store.hpp
src/server/: status.cpp  status.hpp
src/user_interface/: widescreen_element_reposition_menu.S  widescreen_override.cpp  widescreen_override.hpp
(+90 files in other folders)
